# stockwatcher

./: .env.example  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/: main.py
src/app/: config.py  database.py
src/app/api/: __init__.py  auth.py
src/app/api/routes/: stock.py
src/app/dto/: auth.py  base.py  marketwatch.py  response.py  stock.py
src/app/gateways/: marketwatch.py  polygon.py
src/app/models/: base.py  stock.py
src/app/repositories/: stocks.py
src/app/services/: marketwatch.py  stocks.py
tests/: __init__.py  conftest.py  utils.py
tests/api/: test_stock_api.py
tests/fixtures/: __init__.py  config.py  gateways.py  http.py  stock.py
tests/gateways/: test_marketwatch.py
tests/mocks/: __init__.py  cache.py  database.py  polygon.py  stock.py
