[tool.poetry]
name = "stocks-api"
version = "0.1.0"
description = ""
authors = ["Morgan Nicholson <55922364+nichmorgan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
inflection = "^0.5.1"
kink = "^0.8.0"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
sqlmodel = {version = "^0.0.19", extras = ["asyncio"]}
aiohttp = "^3.9.5"
parsel = "^1.9.1"
requests-html = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
