[tool.poetry]
name = "stockwatcher"
version = "0.1.0"
description = ""
authors = ["Morgan Nicholson <morgannicholson1371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
inflection = "^0.5.1"
kink = "^0.8.0"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
sqlmodel = { version = "^0.0.19", extras = ["asyncio"] }
python-dateutil = "^2.9.0.post0"
fastapi-jwt = "^0.3.0"
requests = "^2.32.3"
fastapi-cache2 = { version = "^0.2.1", extras = ["redis"] }


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"
pytest-asyncio = "^0.23.7"
types-python-dateutil = "^2.9.0.20240316"
polyfactory = "^2.16.0"
types-redis = "^4.6.0.20240425"
httpx = "^0.27.0"
requests-mock = "^1.12.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
